<resources>
    <string name="app_name">Train Ticket App</string>
    <string name="login">Bejelentkezés</string>
    <string name="email">Email</string>
    <string name="password">Jelszó</string>
    <string name="from">Honnan</string>
    <string name="destination">Hová</string>
    <string name="when">Mikor</string>
    <string name="search">Keresés</string>
    <string name="my_tickets">Jegyeim</string>
    <string name="register">Regisztráció</string>
    <string name="last_name">Vezetéknév</string>
    <string name="first_name">Keresztnév</string>
    <string name="password_again">Jelszó ismét</string>
    <string name="loading">Egy pillanat…</string>
    <string name="discounts">Kedvezmények</string>
    <string name="placeholder">plchldr</string>
    <string name="logout">Kijelentkezés</string>
    <string name="home_menu">Főmenü</string>
    <string name="tickets_menu">Jegyeim</string>
    <string name="settings_menu">Beállítások</string>
    <string name="routes">Útvonalak</string>
    <string name="download">Letöltés</string>
    <string name="ticket_details">Vonatjegy</string>
    <string name="modify_data">Adatok módosítása</string>
    <string name="isDepart">Az időpont</string>
    <string name="no_discount">nincs</string>
    <string name="percent_50">50%</string>
    <string name="percent_90">90%</string>
    <string name="departure">indulás</string>
    <string name="arrival">érkezés</string>
    <string name="comfort">Helyjegy</string>
    <string name="fastTrain">Gyorsvonat</string>
    <string name="class_2">2. osztály</string>
    <string name="class_1">1. osztály</string>
    <string name="price">%1$d Ft</string>
    <string name="minutes">%1$d perc</string>
    <string name="distance">%1$d km</string>
    <string name="budapest">Budapest</string>
    <string name="dummy_time">14:00</string>
    <string name="no_result">Nincs találat.</string>
</resources>